--- a/README
+++ b/README
@@ -33,5 +33,6 @@ As of revision b1a4d6befffad9c1d8cf23ee4d16b78e47de0000, the plugin is known to 
 - Revision: 16be1c3e83f795a879765eaffde7cb64a3a19f3e
 - Notes:
     * This revision redefines the define_command protocol message for Coq sessions: PIDE notifies Coq which commands should be ignored.
+    * Later revisions do not break the behaviour. In particular, the tag 'Coq-0.1.0' on the 'standalone' branch also works with this plugin.
     * The PIDE_notes repository is a Mercurial repository, not a Git one.
     * The README.coq file in the repo provides a brief overview on how to run Isabelle/jEdit with Coq. These notes are a bit outdated/broken. The main problem is that ./bin/isabelle build no longer compiles the jars, and therefore does not build Pure, or creates the jEdit folder. A partial solution is to get a clean version of Isabelle from http://isabelle.in.tum.de and use the ./bin/isabelle build script from that distribtion to obtain a Pure heap. That clean version can also be used instead of the Tools/jEdit/dist/jars relative to the repository.
