--- a/README
+++ b/README
@@ -23,9 +23,10 @@ As of revision b1a4d6befffad9c1d8cf23ee4d16b78e47de0000, the plugin is known to 
 
 ### Coq
 - Branch: trunk at https://github.com/coq/coq
-- Revision: `db8e0d7ecaf233ae73705d2f57635a38f8825dad`
+- Revision: `cfb5201e2ebc2516e3de7c578355db8bd4f08d35`
 - Notes:
-    * Other revisions on this branch might work, but this one has been tested.
+    * This revision on Coq trunk introduces an API change: query routing information is kept around in Coq. 
+    * For previous versions of Coq trunk, use a slightly older version of PIDEtop.
     
 
 ### PIDE
