--- a/README
+++ b/README
@@ -3,6 +3,7 @@ PIDEtop
 
 This repository provides a toplevel plugin to make Coq speak the PIDE protocol. If you are looking for a release to go with PIDE, checkout the PIDEtop branch (the default branch of this repository).
 
+**Unless you are using Windows, you should not be using the 'download' page on the left. Follow the build instructions below.**
 
 Building
 --------
