--- a/README
+++ b/README
@@ -26,9 +26,9 @@ As of revision b1a4d6befffad9c1d8cf23ee4d16b78e47de0000, the plugin is known to 
 
 ### Coq
 - Branch: trunk at https://github.com/coq/coq
-- Revision: [7008576175028838d5d7ba899dbc44d04e2d23c1](https://github.com/coq/coq/commit/7008576175028838d5d7ba899dbc44d04e2d23c1)
+- Revision: [c6d356844ec857b376302c50c925faae558814a9](https://github.com/coq/coq/commit/c6d356844ec857b376302c50c925faae558814a9)
 - Notes:
-    * This revision on Coq trunk introduces an API change: feedback is handled by plugin-installed hooks. 
+    * This revision of Coq fixes issue #18 reported on the Pide_notes repository: too many coqtop processes were used, with large amount of memory. Because this fix induced an API change, it also requires an updated PIDEtop.
     * For previous versions of Coq trunk, use a slightly older version of PIDEtop.
     
 
